--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "adapt-inline-menu",
-  "homepage": "https://github.com/kunjsharma/adapt-inline-menu.git",
+  "repository": "https://github.com/kunjsharma/adapt-inline-menu.git",
   "version": "0.0.1",
   "framework": ">=2.2",
   "homepage": "https://github.com/kunjsharma/adapt-inline-menu",
