--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     
     "homepage": "https://github.com/kunjsharma/adapt-inline-menu",
 	"issues": "https://github.com/kunjsharma/adapt-inline-menu",
-	"displayName" : "Table",
-  	"component" : "simple-table",
+	"displayName" : "InlineMenu",
+  	"component" : "adapt-inline-menu",
     "description": "An extension to allow learners to add inline menu.",
     "authors": [
         "Kunj B Sharma <kunjsharma@hotmail.com>"
