--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,15 @@
         "Kunj B Sharma <kunjsharma@hotmail.com>"
     ],
     "keywords": [
+        "adapt",
+        "adapt-plugin",
         "adapt-plugin",
         "adapt-extension",
-        "adapt-inline-menu"
+        "adapt extension",
+        "adapt-inline-menu",
+        "adapt inline menu",
+        "adapt menu",
+        "adapt inline"
     ],
     "license": "GPLv3"
 }
