--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "adapt-inline-menu",
-	"version": "2.0.1",
-    "framework": "^3.2.1",
+	"version": "3.0.0",
+    "framework": ">=5",
     
     "homepage": "https://github.com/kunjsharma/adapt-inline-menu",
 	"issues": "https://github.com/kunjsharma/adapt-inline-menu",
